# O-Equilibrio-da-Forca

./: .gitignore  AT_ST.cpp  AT_ST.h  CMakeLists.txt  Ente.h  Entidade.h  Fase.h  Fogo.h  Gelo.h  Gerenciador_Colisoes.h  Gerenciador_Grafico.cpp  Gerenciador_Grafico.h  Guerra_dos_Clones.h  Hoth.h  Inimigo.h  Inimigo1.h  Inimigo2.h  Jogador.h  K_250.h  K_2SO.h  Lava.h  Lista.h  ListaEntidades.h  Menu.cpp  Menu.h  Mustafar.h  O_Equilibrio_da_Forca.h  O_Equilibrio_da_Forca_v1.0.mdj  Obstaculo.h  Ordem_66.h  Personagem.h  Plataforma.h  Primeira_Ideia.mdj  Projetil.h  Segunda_Ideia.mdj  Stormtrooper.h  chefao.cpp  chefao.h  main  main.cpp
Desktop/O-Equilibrio-da-Forca/: .gitignore  CMakeLists.txt
headers/: Entidade.h  Fase.h  Gerenciador_Grafico.h  Hoth.h  Inimigo.h  Jogador.h  Lista.h  Menu.h  Mustafar.h
include/: AT_ST.h  ElemRank.h  Ente.h  Entidade.h  Estado.h  Fase.h  Gelo.h  Gerenciador_Colisoes.h  Gerenciador_Eventos.h  Gerenciador_Grafico.h  Hoth.h  Inimigo.h  Jogador.h  Jogo.h  K_2SO.h  Lava.h  Lista.h  ListaEntidades.h  Menu.h  Mustafar.h  O_Equilibrio_da_Forca.h  Observado.h  Observador.h  Observador_Eventos.h  Observador_Menu.h  Observador_Teclado.h  Obstaculo.h  Personagem.h  Plataforma.h  Principal.h  Projetil.h  Stormtrooper.h  Thread.h
sources/: Gerenciador_Grafico.cpp  Menu.cpp  main.cpp
src/: AT_ST.cpp  ElemRank.cpp  Ente.cpp  Entidade.cpp  Fase.cpp  Gelo.cpp  Gerenciador_Colisoes.cpp  Gerenciador_Eventos.cpp  Gerenciador_Grafico.cpp  Hoth.cpp  Inimigo.cpp  Jogador.cpp  Jogo.cpp  K_2SO.cpp  Lava.cpp  ListaEntidades.cpp  Menu.cpp  Mustafar.cpp  OEquilibriodaForca  Observado.cpp  Observador.cpp  Observador_Eventos.cpp  Observador_Menu.cpp  Observador_Teclado.cpp  Obstaculo.cpp  Personagem.cpp  Plataforma.cpp  Principal.cpp  Projetil.cpp  Stormtrooper.cpp  Thread.cpp  k_2SO.cpp  main.cpp
